--- a/BluetoothKitObjC/Podfile
+++ b/BluetoothKitObjC/Podfile
@@ -4,5 +4,6 @@ target 'BluetoothKitObjC' do
 #    pod 'IGListKit', '~> 3.0'
     pod 'ObjectiveSugar'
     pod 'PromisesObjC'
+    pod 'Masonry'
 #    pod 'AFNetworking'
 end
